Fixed a recentering after crop/resize bug

This introduces quite a non-trivial still-point concept... please, read
about it in the docs for KisImage::sigImageSizeChanged.

The general idea of user iteractions:
1) When rescaling/rotating the whole image (the actual content
   doesn't change):

   -> the scaling/rotating of the image happens around its center
      (not around the center of the screen!)

2) When cropping/changing the size of the canvas (the amount of content
   changes):

   -> the content of the image that is left after cropping does not
      change its position on screen

3) When working in FIT_WIDTH/FIT_PAGE modes:

   -> changing the size of the image switches zoom mode to CONSTANT

BUG:313489